# test-github-actions-self-hosted-runner-container

./: .envrc  README.md  compose.sample.yml  compose.yaml  pyproject.toml  tasks.py
.github/workflows/: hello.yaml  run.yaml
image/: Dockerfile  run.sh
image/src/: hello.py
manifests/: deploy.yml  kustomization.yml
manifests/secret/: .gitignore
src/testing_github_actions_self_hosted_runner_container/: __init__.py
